# mockups

./: .gitignore  README.md  iphone_mockup.py  pyproject.toml  test_iphone_mockup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
src/mockups/: __init__.py  cli.py  core.py
tests/: test_mockup.py
